Fix h1 on mobile

--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -45,6 +45,7 @@ body {
   line-height: 1;
   text-align: center;
   margin-left: -5px;
+  margin-bottom: 0.66rem;
   text-shadow: 0 10px 20px rgba(18, 18, 18, 0.2),
     0 6px 6px rgba(18, 18, 18, 0.25);
 }
